2009-09-10  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c: 
	  Refactor the initialisation of objects in the daemon to better
	  support restart of NWAM daemon. Populationg of the lists of objects
	  has been separated out to a function that can be called on first
	  init and on restarts of nwamd. Tries to reuse objects if they
	  already exist and handle add/removes that occurred while nwam was
	  down.
	* capplet/nwam_net_conf_panel.c: 
	  Reduce indentation in conf panel to 24. After speakinig with Calum
	  40 just looks too much.
	* common/libnwamui.c: 
	  Add comment to default_log_handler as placeholder of how to fire
	  assertion on critical errors if using --debug.
	* common/nwamui_ncu.c, common/nwamui_ncu.h:
	  Add SCANNING state for ncus, and status strings.
	* daemon/status_icon.c: 
	  Try to avoid a lot of noise about key and selection needed events,
	  remembering the ncu or wifi we last prompted on, and if it's the
	  same then don't prompt. Resets the remembered values on a successful
	  connection. 

2009-09-10  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_ncp.c (nwamui_ncp_add_ncu):
	Fixed 10304 need to enable a connection twice before it becomes active

2009-09-09  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_conn_conf_ip_panel.c (nwam_conf_ip_panel_init):
	Make addr/subnet labels selectable.
	* capplet/nwam_net_conf_panel.c (nwam_compose_tree_view),
	(refresh):
	Fixed select edit combo refresh current profile combo. Default
	do not show expanders in treeview.

2009-09-08  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.ui:
	  Fix duplicate ids on various widgets.
	* common/libnwamui.c: 
	  Make get_gtk_builder() generate warnings for issues loading the .ui
	  file.

2009-09-08  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.9 for new build.

2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_condition_vbox.c: 